Update yarn results